--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Online Exam Checker</title>
+    <meta name="description" content="Easy checking how many correct responses a student has given a test.">
+    <meta name="robots" content="index, follow" />
   </head>
 
   <body>
@@ -14,33 +15,49 @@
         <div class="container has-text-centered">
           <h1 class="title">
             Correct responses:<br>
-            <span class="help">These are the 120 correct responses to the test</span>
+            <span class="help">These are the correct responses to the test. You can change these to fit your case.</span>
           </h1>
-          <div class="field">
+          <div class="field has-addons">
+            <div class="control is-expanded">
+              <input id="exam-correct-answers"
+                type="text"
+                class="input is-info"
+                placeholder="Enter responses here"
+                value="CBCABCBAABBACCBABCBACACABBBAACBCCABAAABBCCDBADABCDCBCADACCBABBCCDADCADBBBACAADADABADCCCABBDBBDBABBCDBDCCCACDCBADCDDADBCA"
+                autocomplete="off">
+              <p id="exam-correct-answers-counter" class="has-text-left"></p>
+            </div>
             <div class="control">
-              <input type="text" class="input" value="CBCABCBAABBACCBABCBACACABBBAACBCCABAAABBCCDBADABCDCBCADACCBABBCCDADCADBBBACAADADABADCCCABBDBBDBABBCDBDCCCACDCBADCDDADBCA" disabled>
+              <a href="#" id="exam-correct-answers-reset" class="button is-info">Reset</a>
             </div>
           </div>
+
           <h1 class="title">
             Enter exam responses:
-            <small class="help">These are the responses a student gave to the test</small>
+            <span class="help">These are the responses given to the test.</span>
+            <span class="help">Use dash (-) for missing answer.</span>
           </h1>
-          <form id="exam-form" autocomplete="off">
-            <div class="field">
-              <div class="control">
-                <input id="exam-responses" class="input is-primary" name="exam-responses" type="text" placeholder="Enter responses here" autocomplete="off">
-              </div>
+          <div class="field has-addons">
+            <div class="control is-expanded">
+              <input id="exam-responses"
+                class="input is-primary"
+                name="exam-responses"
+                type="text"
+                placeholder="Enter responses here"
+                autocomplete="off">
               <p id="exam-responses-counter" class="has-text-left"></p>
             </div>
-            <div class="buttons is-centered">
-              <button type="submit" class="button is-primary is-medium">Submit</button>
-              <button type="reset" class="button is-primary is-medium">Reset</button>
+            <div class="control">
+              <a href="#" id="exam-responses-reset" class="button is-primary">Reset</a>
             </div>
-          </form>
+          </div>
+
           <h1 class="title" id="results">
           </h1>
+
         </div>
       </div>
+
       <div class="hero-foot">
         <p class="has-text-centered">
             <em>&copy; Marius Lazar</em>
